button not showing bug

--- a/public/videostyle.css
+++ b/public/videostyle.css
@@ -4,9 +4,12 @@
   box-sizing: border-box;
   overflow: hidden;
 }
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
 html {
-  width: 100%;
-  height: 100%;
+  height: -webkit-fill-available;
 }
 #video-grid {
   /* width: 1075px; */
@@ -138,6 +141,7 @@ h3 {
   margin-top: 10px;
   width: 40px;
   display: none;
+  font-size: 28px !important;
 }
 .comment {
   display: none;
